argoproj/tailscale-operator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tailscale-operator
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/enforce-version: latest
